--- a/index.html
+++ b/index.html
@@ -63,29 +63,28 @@
                     <td data-bind="text: name"></td>
                     <td data-bind="text: price"></td>
                     <td>
-
-                         <fd-custom-button params="buttonText: 'Borrar', value: id, 'action': $parent.fdOnRemove"></fd-custom-button>
-                         <fd-custom-button params="buttonText: 'Editar', value: id, 'toggle': 'modal', 'target': '#exampleModal'"></fd-custom-button>
-
+                        <fd-custom-button params="cButtonText: 'Borrar', 
+                                                  value: id, 
+                                                  'action': $parent.fdOnRemove">
+                        </fd-custom-button>
+                        <fd-custom-button params="cButtonText: 'Editar', 
+                                                  value: id"
+                                          data-toggle="modal"
+                                          data-target="#fd-Modal">
+                        </fd-custom-button>
                     </td>
                 </tr>
             </tbody>
         </table>
   
             <!-- ? ----------------------------------------------- -->
-            
-
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                Temp Launch Modal
-              </button>
-
 
             <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="fd-Modal" tabindex="-1" role="dialog" aria-labelledby="fd-ModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="fd-ModalLabel">Modal title</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -109,8 +108,8 @@
                 <div class="modal-footer">
                 <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary">Save changes</button> -->
-                <fd-custom-button params="buttonText: 'Aceptar'"></fd-custom-button>
-                <fd-custom-button params="buttonText: 'Cancelar'"></fd-custom-button>
+                <fd-custom-button params="cButtonText: 'Aceptar'"></fd-custom-button>
+                <fd-custom-button params="cButtonText: 'Cancelar'"></fd-custom-button>
                 </div>
             </div>
             </div>
