--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <th>Acciones</th>
                 </tr>
             </thead>
-            <tbody data-bind="foreach: fdItemsList">
+            <tbody data-bind="foreach: fdItemsList()">
                 <tr>
                     <td data-bind="text: id"></td>
                     <td data-bind="text: name"></td>
@@ -68,7 +68,8 @@
                                                   'action': $parent.fdOnRemove">
                         </fd-custom-button>
                         <fd-custom-button params="cButtonText: 'Editar', 
-                                                  value: id"
+                                                  value: id,
+                                                  'action': $parent.fdOnEdit"
                                           data-toggle="modal"
                                           data-target="#fd-Modal">
                         </fd-custom-button>
@@ -76,12 +77,14 @@
                 </tr>
             </tbody>
         </table>
+        <button class="btn btn-primary" data-bind="click: SowFdItemsList">Ver estado actual de fdItemsList</button>
   
             <!-- ? ----------------------------------------------- -->
 
             <!-- Modal -->
         <div class="modal fade" id="fd-Modal" tabindex="-1" role="dialog" aria-labelledby="fd-ModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
+            <div class="modal-content">
             <div class="modal-content">
                 <div class="modal-header">
                 <h5 class="modal-title" id="fd-ModalLabel">Modal title</h5>
@@ -93,23 +96,25 @@
 
                     <div class="form-group">
                         <label class="col-form-label">ID</label>
-                        <input class="form-control" type="text" value="7">
+                        <input disabled class="form-control" type="text" data-bind="value: fdToEditItem().id">
+                        <!-- <input class="form-control" type="text"> -->
                     </div>
                     <div class="form-group">
                         <label class="col-form-label">Nombre</label>
-                        <input class="form-control" type="text" value="Nombre">
+                        <input class="form-control" type="text" data-bind="value: fdToEditItem().name">
+                        <!-- <input class="form-control" type="text" data-bind=""> -->
                     </div>
                     <div class="form-group">
                         <label class="col-form-label">Precio</label>
-                        <input class="form-control" type="text" value="777">
+                        <input class="form-control" type="number" data-bind="value: fdToEditItem().price">
+                        <!-- <input class="form-control" type="text"> -->
                     </div>
 
                 </div>
                 <div class="modal-footer">
-                <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button> -->
-                <fd-custom-button params="cButtonText: 'Aceptar'"></fd-custom-button>
-                <fd-custom-button params="cButtonText: 'Cancelar'"></fd-custom-button>
+
+                <fd-custom-button params="cButtonText: 'Guardar', 'action': fdOnSave""></fd-custom-button>
+                <fd-custom-button data-dismiss="modal" params="cButtonText: 'Cancelar'"></fd-custom-button>
                 </div>
             </div>
             </div>
