Punto de guardado antes de intentar incoporar requireJS

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
             
     </div>
 
+    <template id="fd-custom-bttn">
+        <button data-bind="click: onClick, class: cButtonClass">
+            <span data-bind="text: cButtonText"></span>
+        </button>
+    </template>
+
    
 
 
